--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,114 +2,99 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Steam 录像自动化转换工具</title>
+    <title>Steam 录像转换器</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        /* 这里直接放入原本 style.css 的内容 */
-        body { font-family: 'Segoe UI', sans-serif; background: #f4f4f9; padding: 20px; }
-        .container { max-width: 1200px; margin: 0 auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        .section { margin-bottom: 25px; padding: 15px; border: 1px solid #ddd; border-radius: 6px; }
-        .main-content { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-        #clipListContainer { max-height: 400px; overflow-y: auto; border: 1px solid #eee; margin-bottom: 10px; }
-        .clip-item { padding: 10px; cursor: pointer; border-bottom: 1px solid #eee; }
-        .clip-item:hover { background: #f0f0f0; }
-        .clip-item.selected { background: #e3f2fd; border-left: 5px solid #1e88e5; }
-        .clip-item.converted { background: #e8f5e9; color: #888; cursor: default; }
-        #queueContainer div { padding: 10px; margin-bottom: 5px; border: 1px solid #ccc; border-radius: 4px; }
-        .running { background: #e3f2fd; }
+        body { background: #121212; color: #e0e0e0; font-family: sans-serif; padding: 20px; }
+        .container { max-width: 1100px; margin: 0 auto; }
+        .box { background: #1e1e1e; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.3); }
+        input { background: #2c2c2c; border: 1px solid #333; color: #fff; padding: 10px; width: 60%; border-radius: 4px; }
+        button { background: #0d47a1; color: #fff; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer; }
+        button:hover { background: #1565c0; }
+        button:disabled { background: #444; }
+        .grid { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; }
+        .list { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 15px; max-height: 500px; overflow-y: auto; }
+        .item { background: #252525; border-radius: 6px; overflow: hidden; border: 2px solid transparent; cursor: pointer; transition: 0.2s; }
+        .item:hover { background: #333; }
+        .item.selected { border-color: #2196f3; background: #2c3e50; }
+        .item.done { opacity: 0.5; border-color: #4caf50; cursor: default; }
+        .img-box { width: 100%; height: 100px; background: #000; display: flex; align-items: center; justify-content: center; font-size: 12px; }
+        .img-box img { width: 100%; height: 100%; object-fit: cover; }
+        .q-item { background: #252525; padding: 10px; border-radius: 4px; margin-bottom: 10px; font-size: 13px; }
         progress { width: 100%; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Steam 录像转换控制台</h1>
-        <div class="section">
-            <h2>1. 设置录像根目录</h2>
-            <input type="text" id="clipPath" style="width:70%; padding:8px;" placeholder="例如: H:\录屏工作目录\Steam">
-            <button onclick="setPathAndLoad()" style="padding:8px 15px;">设置路径并扫描</button>
-            <p id="pathStatus"></p>
+        <div class="box">
+            <h2>Steam 录像自动转换工具</h2>
+            <input type="text" id="p" placeholder="路径: H:\录屏工作目录\Steam">
+            <button onclick="setP()">扫描目录</button>
+            <p id="msg" style="color:#4caf50"></p>
         </div>
-        <div class="main-content">
-            <div class="section">
-                <h2>2. 待转换列表</h2>
-                <div id="clipListContainer"></div>
-                <button onclick="addToQueue()" id="queueBtn" disabled>加入转换队列</button>
+        <div class="grid">
+            <div class="box">
+                <div style="display:flex; justify-content: space-between; margin-bottom:10px;">
+                    <span>待处理素材</span>
+                    <button id="qBtn" onclick="addQ()" disabled>加入队列</button>
+                </div>
+                <div id="list" class="list"></div>
             </div>
-            <div class="section">
-                <h2>3. 队列进度</h2>
-                <div id="queueContainer"></div>
-            </div>
-            <div class="section" style="grid-column: 1/3;">
-                <canvas id="progressChart" style="height:200px;"></canvas>
+            <div class="box">
+                <span>转换进度</span>
+                <canvas id="chart" style="margin:10px 0;"></canvas>
+                <div id="qList"></div>
             </div>
         </div>
     </div>
-
     <script>
-        /* 这里直接放入原本 script.js 的内容 */
-        const API_BASE = '/api';
-        let selectedClips = [];
-        let progressChart = null;
-
+        let sel = [], chart = null;
         function initChart() {
-            const ctx = document.getElementById('progressChart').getContext('2d');
-            progressChart = new Chart(ctx, {
-                type: 'bar', data: { labels: [], datasets: [{ label: '进度 (%)', data: [], backgroundColor: 'rgba(54, 162, 235, 0.7)' }] },
-                options: { indexAxis: 'y', scales: { x: { max: 100, min: 0 } } }
+            chart = new Chart(document.getElementById('chart'), {
+                type: 'bar', data: { labels: [], datasets: [{ label: '进度%', data: [], backgroundColor: '#2196f3' }] },
+                options: { indexAxis: 'y', scales: { x: { max:100, min:0 } } }
             });
         }
-
-        async function setPathAndLoad() {
-            const path = document.getElementById('clipPath').value;
-            try {
-                const res = await axios.post(`${API_BASE}/set_path`, { path });
-                document.getElementById('pathStatus').innerText = "✅ " + res.data.message;
-                await loadClipList();
-                setInterval(updateProgress, 1000);
-            } catch (e) { alert("路径设置失败"); }
+        async function setP() {
+            const res = await axios.post('/api/set_path', { path: document.getElementById('p').value });
+            document.getElementById('msg').innerText = res.data.message;
+            load();
+            if(!window.timer) window.timer = setInterval(tick, 1000);
         }
-
-        async function loadClipList() {
-            const res = await axios.get(`${API_BASE}/clips`);
-            const container = document.getElementById('clipListContainer');
-            container.innerHTML = '';
-            res.data.clips.forEach(clip => {
-                const div = document.createElement('div');
-                div.className = 'clip-item' + (clip.is_converted ? ' converted' : '');
-                div.innerText = (clip.is_converted ? '[已转换] ' : '') + clip.name;
-                if (!clip.is_converted) div.onclick = () => {
-                    div.classList.toggle('selected');
-                    const idx = selectedClips.indexOf(clip.id);
-                    if (idx > -1) selectedClips.splice(idx, 1); else selectedClips.push(clip.id);
+        async function load() {
+            const res = await axios.get('/api/clips');
+            const div = document.getElementById('list'); div.innerHTML = '';
+            res.data.clips.forEach(c => {
+                const el = document.createElement('div');
+                el.className = `item ${c.is_converted?'done':''} ${sel.includes(c.id)?'selected':''}`;
+                el.innerHTML = `<div class="img-box">${c.thumb?`<img src="${c.thumb}?t=${Date.now()}">`:'无预览'}</div><div style="padding:5px;font-size:11px">${c.id.slice(-15)}</div>`;
+                if(!c.is_converted) el.onclick = () => {
+                    if(sel.includes(c.id)) sel = sel.filter(i=>i!==c.id); else sel.push(c.id);
+                    document.getElementById('qBtn').disabled = sel.length===0;
+                    load();
                 };
-                container.appendChild(div);
+                div.appendChild(el);
             });
-            document.getElementById('queueBtn').disabled = false;
         }
-
-        async function addToQueue() {
-            await axios.post(`${API_BASE}/queue`, { clip_ids: selectedClips });
-            selectedClips = [];
-            loadClipList();
+        async function addQ() {
+            await axios.post('/api/queue', { clip_ids: sel });
+            sel = []; document.getElementById('qBtn').disabled = true; load();
         }
-
-        async function updateProgress() {
-            const res = await axios.get(`${API_BASE}/progress`);
-            const statuses = res.data.all_statuses;
-            const qContainer = document.getElementById('queueContainer');
-            qContainer.innerHTML = '';
-            const labels = [], data = [];
-            for (let id in statuses) {
-                if (statuses[id].status === 'running' || statuses[id].status === 'pending') {
-                    labels.push(id);
-                    data.push(statuses[id].progress);
-                    qContainer.innerHTML += `<div class="${statuses[id].status}"><strong>${id}</strong>: ${statuses[id].progress}%</div>`;
+        async function tick() {
+            const res = await axios.get('/api/progress');
+            const stats = res.data.all_statuses;
+            const qDiv = document.getElementById('qList'); qDiv.innerHTML = '';
+            let lbs = [], dat = [], hasDone = false;
+            for(let id in stats) {
+                if(stats[id].status === 'running' || stats[id].status === 'pending') {
+                    lbs.push(id.slice(-10)); dat.push(stats[id].progress);
+                    qDiv.innerHTML += `<div class="q-item"><b>${id.slice(-15)}</b><br><small>${stats[id].eta}</small><progress value="${stats[id].progress}" max="100"></progress></div>`;
                 }
+                if(stats[id].progress === 100) hasDone = true;
             }
-            progressChart.data.labels = labels;
-            progressChart.data.datasets[0].data = data;
-            progressChart.update();
+            chart.data.labels = lbs; chart.data.datasets[0].data = dat; chart.update();
+            if(hasDone) load();
         }
         document.addEventListener('DOMContentLoaded', initChart);
     </script>
